test/libsolidity/syntaxTests/nameAndTypeResolution/583_abi_encode_packed_with_rational_number_constant.sol
contract C {
    function f() pure public { abi.encodePacked(0/1); }
}
// ----
// TypeError: (61-64): Cannot perform packed encoding for a literal. Please convert it to an explicit type first.